# gstreamer-js

./: .gitignore  LICENSE  Makefile  Makefile.am  README  bufferjitter.c  bufferspike.c  bufferspike.h  clockdrift.c  clockdrift.h  configure.ac  drop2key.c  dropdeltas.c  internalcommon.c  internalcommon.h  internalsink.c  internalsink.h  internalsrc.c  internalsrc.h  pipeline-stats.h  pipestats.c  pipestats.h  register.c
src/: Makefile.am  bufferjitter.c  bufferjitter.h  bufferspike.c  clockdrift.c  clockdrift.h  convolution.c  convolution.h  drop2key.c  drop2key.h  dropdeltas.c  dropdeltas.h  dumpcaps.c  dumpcaps.h  internalcommon.c  internalsink.c  internalsrc.c  internalsrc.h  jsmotion.c  jsmotion.h  pipestats.c  pipestats.h  register.c  register.h  vhist.c  vhist.h
test-internal/: .depend  Makefile  VideoPipeLine.cpp  test-internal.cpp
tests/: Makefile  VideoPipeLine.cpp  VideoPipeLine.h  test-internal-h264.cpp  test-internal-mjpeg.cpp
